--- a/templates/_base_vue.html
+++ b/templates/_base_vue.html
@@ -1,16 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>{% block title %}{% endblock %}</title>
-<!-- Bootstrap CSS CDN-->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<script defer src="http://localhost:8080/js/chunk-vendors.js"></script><script defer src="http://localhost:8080/js/app.js"></script></head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  {% load static %}
+  
+  <!-- Bootstrap CSS CDN-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
+    crossorigin="anonymous" />
+  <!-- <link rel="stylesheet" href="Play2Learn4/static/css/main.css" /> -->
+  <link rel="stylesheet" href="{% static 'css/main.css '%}"/>
+
+  <script defer src="http://localhost:8080/js/chunk-vendors.js"></script>
+  <script defer src="http://localhost:8080/js/app.js"></script>
+
+  <title>{% block title %}{% endblock %} | Play2Learn</title>
+</head>
+
 <body>
-  {% block main %}{% endblock %}
-  <div id="app"></div>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a id="play2learn-logo-home-link" class="navbar-brand" href="#">
+        Play2Learn Logo
+        <!-- <img id="play2learn-logo" src="" alt="Play2Learn Logo" 
+          class="img-fluid"/> -->
+      </a>
+
+      <button id="main-menu-toggle-btn" class="navbar-toggler me-3" type="button" data-bs-toggle="collapse" 
+        data-bs-target="#main-menu" aria-expanded="false" aria-controls="main-menu" 
+        aria-label="Toggle Mobile Main Menu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div id="main-menu" class="collapse navbar-collapse me-3 justify-content-end text-end">
+        <ul id="main-menu-top-nav" class="navbar-nav ms-auto">
+          <!-- Games Dropdown -->
+          <li id="games-nav-dropdown" class="nav-item dropdown ms-auto">
+            <a id="games-dropdown-link" 
+              class="nav-link dropdown-toggle" 
+              href="#"  
+              role="button" data-bs-toggle="dropdown" aria-haspopup="true" 
+              aria-expanded="false">Games</a>
+              <div id="games-dropdown-menu-div" class="dropdown-menu" 
+                aria-labelledby="games-dropdown-link">
+                  <a id="ah-nav-link" class="dropdown-item" href="#">Anagram Hunt</a> 
+                  <a id="mf-nav-link" class="dropdown-item" href="#">Math Facts</a>
+              </div>
+          </li><!-- END Games Dropdown -->
+
+          <!-- Me/My Account Dropdown -->
+          <li id="me-nav-dropdown" class="nav-item dropdown ms-auto">
+            <a id="me-dropdown-link" class="nav-link dropdown-toggle" 
+              href="#"  
+              role="button" data-bs-toggle="dropdown" aria-haspopup="true" 
+              aria-expanded="false">Me</a>
+            <div id="me-dropdown-menu-div" class="dropdown-menu" 
+              aria-labelledby="me-dropdown-link">
+                <a id="my-account-nav-link" class="dropdown-item" href="#">My Account</a>
+                <a id="my-games-nav-link" class="dropdown-item"href="#">My Games</a>
+                <div id="me-dropdown-divider" class="dropdown-divider"></div>
+                <form method="post" action="#">
+                  {% csrf_token %}
+                  <button id="logout-nav-btn" 
+                    class="btn dropdown-item" 
+                    name="LOG OUT" 
+                    alt="Log out of your account" 
+                    type="submit">Log Out</button>
+                </form>
+            </div>
+          </li><!-- END Me/My Account Dropdown -->
+          
+          <li id="home-nav-item" class="nav-item active">
+            <a id="home-nav-link" class="nav-link" href="#">Home</a> 
+          </li>
+          <li id="about-nav-item" class="nav-item">
+            <a id="about-nav-link" class="nav-link" href="">About</a>
+          </li>
+          <li id="contact-nav-item" class="nav-item">
+            <a id="contact-nav-link" class="nav-link" href="">Contact Us</a>
+          </li>
+
+          <!-- Sign In/Up Dropdown -->
+          <li id="sign-nav-dropdown" class="nav-item dropdown ms-auto">
+            <a id="sign-dropdown-link" class="nav-link dropdown-toggle" 
+              href="#"  
+              role="button" data-bs-toggle="dropdown" aria-haspopup="true" 
+              aria-expanded="false">Sign In/Up</a>
+            <div id="sign-dropdown-menu-div" class="dropdown-menu" 
+              aria-labelledby="sign-dropdown-link">
+              <a id="login-nav-link" class="dropdown-item" href="#">Log in</a>
+              <a id="register-nav-link" class="dropdown-item" href="#">Register</a>
+            </div>
+          </li><!-- END Sign In/Up Dropdown -->
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    {% block main %}{% endblock %}
+    <div id="app"></div>
+  </main>
+
+  <footer></footer>
+
+   <!-- FONT AWESOME CDN -->
+  <script src="https://kit.fontawesome.com/5edc2e2a09.js" crossorigin="anonymous"></script>
   <!-- Bootstrap JS CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
