--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,10 +1,9 @@
 {% extends "_base_vue.html" %}
 
 {% block title %}
-  Math Facts
+  Home
 {% endblock %}
 
 {% block main %}
-  <h1 class="text-center">Math Facts</h1>
-  {{ block.super }}
+  <h1 class="text-center">Home</h1>
 {% endblock %}
