--- a/templates/anagram-hunt.html
+++ b/templates/anagram-hunt.html
@@ -1,6 +1,9 @@
 {% extends "_base_vue.html" %}
 
-{% block title %}Anagram Hunt{% endblock %}
+{% block title %}
+  Anagram Hunt
+{% endblock %}
+
 {% block main %}
   <h1 class="text-center">Anagram Hunt</h1>
   {{ block.super }}
