--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,8 +1,19 @@
+/* Global Styles, Homepage Styles */
+* {
+  box-sizing: border-box;
+}
+
 html, body {
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
     "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 18px;
+}
+
+img#play2learn-logo {
+  width: 3.5rem;
+  height: auto;
+  padding: 0;
 }
 
 cite {
