--- a/templates/_base_vue.html
+++ b/templates/_base_vue.html
@@ -11,11 +11,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
     crossorigin="anonymous" />
-  <!-- <link rel="stylesheet" href="Play2Learn4/static/css/main.css" /> -->
   <link rel="stylesheet" href="{% static 'css/main.css '%}"/>
+  <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" />
 
   <script defer src="http://localhost:8080/js/chunk-vendors.js"></script>
   <script defer src="http://localhost:8080/js/app.js"></script>
+
+  <!-- All images and graphics used in this web app are free clip art, unless otherwise indicated
+      it was created free with an AI tool, like DALL-E. -->
 
   <title>{% block title %}{% endblock %} | Play2Learn</title>
 </head>
@@ -26,9 +29,12 @@
       <!-- Site Logo -->
       <a id="play2learn-logo-home-link" class="navbar-brand" href="{% url 'pages:home' %}" 
         alt="Play2Learn Logo: Click, tap, or press Enter to go to the home page" 
-        title="Play2Learn Logo: Click, tap, or press Enter to go to the home page">Play2Learn Logo
-        <!-- <img id="play2learn-logo" src="" alt="Play2Learn Logo" 
-          class="img-fluid"/> -->
+        title="Play2Learn Logo: Click, tap, or press Enter to go to the home page">
+        <img id="play2learn-logo" 
+          class="img-fluid ms-2 float-start" 
+          src="{% static 'images/play2Learn_logo.png' %}" 
+          alt="Play2Learn Logo" 
+          aria-description="AI generated image"/>
       </a> <!-- END Site Logo -->
 
       <!-- Mobile Main Menu btn -->
