start-over: Templates (home, about) for pages django app, plus urls, views, and templates subdirs

--- a/templates/_base_vue.html
+++ b/templates/_base_vue.html
@@ -14,10 +14,7 @@
   <link rel="stylesheet" href="{% static 'css/main.css '%}"/>
     
   <title>{% block title %}{% endblock %} | Play2Learn</title>
-  
-  <script defer src="http://localhost:8080/js/chunk-vendors.js"></script>
-  <script defer src="http://localhost:8080/js/app.js"></script>
-</head>
+<script defer src="http://localhost:8080/js/chunk-vendors.js"></script><script defer src="http://localhost:8080/js/app.js"></script></head>
 
 <body>
   <main>
