--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+{% block html %}
 <html lang="en">
 
 <head>
+  {% block head %}
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -17,9 +19,11 @@
   <script defer src="http://localhost:8080/js/app.js"></script>
 
   <title>{% block title %}{% endblock %} | Play2Learn</title>
+  {% endblock %} <!-- end head -->
 </head>
 
 <body>
+  {% block body %}
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a id="play2learn-logo-home-link" class="navbar-brand" href="#">
@@ -85,15 +89,10 @@
       </div>
     </nav>
   </header>
-
-  <main>
-    {% block main %}{% endblock %}
-
-    <!-- <div id="app"></div> -->
-  </main>
+  
+  {% block main %}{% endblock %} <!-- end main -->
 
   <footer></footer>
-
 
   <!-- FONT AWESOME CDN -->
   <script src="https://kit.fontawesome.com/5edc2e2a09.js" crossorigin="anonymous"></script>
@@ -101,6 +100,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
     crossorigin="anonymous"></script>
+  {% endblock %} <!-- end body -->
 </body>
 
-</html>
+</html> 
+{% endblock %} <!-- end html -->
