--- a/templates/_base_vue.html
+++ b/templates/_base_vue.html
@@ -1,33 +1,28 @@
-<!DOCTYPE html>
+{% extends "_base.html" %}
+
+{% block html %}
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  {% load static %}
-  
-  <!-- Bootstrap CSS CDN-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
-    crossorigin="anonymous" />
-  <link rel="stylesheet" href="{% static 'css/main.css '%}"/>
-    
-  <title>{% block title %}{% endblock %} | Play2Learn</title>
+   {% block head %}{{ block.super }}{% endblock head %}
 <script defer src="http://localhost:8080/js/chunk-vendors.js"></script><script defer src="http://localhost:8080/js/app.js"></script></head>
 
 <body>
-  <main>
-    {% block main %}{% endblock %}
-    <div id="app"></div>
-  </main>
+  {% block body %}
   
-  <!-- FONT AWESOME CDN -->
-  <script src="https://kit.fontawesome.com/5edc2e2a09.js" crossorigin="anonymous"></script>
-  <!-- Bootstrap JS CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+  {{ block.super }}
+
+  <noscript>
+      <strong>We're sorry but vue-play2learn-games doesn't work properly without 
+        JavaScript enabled. Please enable it to continue.</strong>
+  </noscript>
+
+  <div id="app"></div>
+  <!-- Built files will be auto injected.  And, the Django tags/blocks in this file will be
+       auto injected into _base_vue.html per the vue.config.js file.-->
+  
+  {% endblock body %}
 </body>
 
 </html>
+{% endblock html %}
