--- a/templates/games/anagram-hunt.html
+++ b/templates/games/anagram-hunt.html
@@ -1,7 +1,12 @@
 {% extends "_base_vue.html" %}
 
-{% block title %}Anagram Hunt{% endblock %}
+{% block title %}
+  Anagram Hunt
+{% endblock %}
+
 {% block main %}
   <h1 class="text-center">Anagram Hunt</h1>
+
   {{ block.super }}
+  
 {% endblock %} 
