--- a/templates/games/math-facts.html
+++ b/templates/games/math-facts.html
@@ -1,7 +1,12 @@
 {% extends "_base_vue.html" %}
 
-{% block title %}Math Facts{% endblock %}
+{% block title %}
+  Math Facts
+{% endblock %}
+
 {% block main %}
   <h1 class="text-center">Math Facts</h1>
+
   {{ block.super }}
+  
 {% endblock %}
