--- a/templates/_base.html
+++ b/templates/_base.html
@@ -70,6 +70,10 @@
                   <a id="mf-nav-link" class="dropdown-item" href="{% url 'games:math-facts' %}">
                     Math Facts
                   </a>
+                  <div id="games-dropdown-divider" class="dropdown-divider"></div>
+                  <a id="leaderboard-nav-link" class="dropdown-item" href="{% url 'games:game-scores' %}">
+                    Leaderboards
+                  </a>
               </div>
           </li><!-- END Games Dropdown -->
 
