cont-models: New Leaderboard View and better fcnal view for `submit_final_score(request)` with all the migrations, models, & templates to go with them

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -71,7 +71,7 @@
                     Math Facts
                   </a>
                   <div id="games-dropdown-divider" class="dropdown-divider"></div>
-                  <a id="leaderboard-nav-link" class="dropdown-item" href="{% url 'games:game-scores' %}">
+                  <a id="leaderboards-nav-link" class="dropdown-item" href="{% url 'games:leaderboards' %}"> 
                     Leaderboards
                   </a>
               </div>
