--- a/templates/_base.html
+++ b/templates/_base.html
@@ -82,7 +82,7 @@
                 aria-labelledby="leaderboards-dropdown-link">
                 <a id="ah-leaderboard-nav-link" 
                   class="dropdown-item" 
-                  href="#">Anagram Hunt Leaderboard</a> 
+                  href="{% url 'games:ah_leaderboard' %}">Anagram Hunt Leaderboard</a> 
                 <a id="mf-leaderboard-nav-link" 
                   class="dropdown-item" 
                   href="{% url 'games:mf_leaderboard' %}">Math Facts Leaderboard</a>
