--- a/templates/games/anagram-hunt.html
+++ b/templates/games/anagram-hunt.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-  <h1 class="text-center">Anagram Hunt</h1>
+  <h2 class="text-center m-3">Anagram Hunt</h2>
 
   {{ block.super }}
   
