--- a/templates/games/mf_leaderboard.html
+++ b/templates/games/mf_leaderboard.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-<h2 class="m-3 text-center">Math Facts Leaderboard</h2>
+<h2 id="mf-leaderboard-heading" class="m-3 text-center">Math Facts Leaderboard</h2>
 
 {% if math_scores %}
   <table id="mf-leaderboard-tbl" class="table table-striped table-hover mx-auto my-3 border">
@@ -30,6 +30,8 @@
     </tbody>
   </table>
 {% else %}
-  <p>No scores yet. Be the first to set a record!</p>
+  <p id="no-scores-yet" class="text-primary text-center">
+    No scores yet. Be the first to set a record!
+  </p>
 {% endif %}
 {% endblock %}
