--- a/templates/_base.html
+++ b/templates/_base.html
@@ -128,9 +128,11 @@
     </nav>
   </header>
   
+  
   {% block main %}{% endblock %} <!-- end main -->
+  
 
-  <footer class="fixed-bottom bg-light row">
+  <footer class="fixed-bottom bg-light row mt-5">
     <div class="col">
       <nav>
         <ul class="nav float-end">
