--- a/templates/games/anagram-hunt.html
+++ b/templates/games/anagram-hunt.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block main %}
-  <h2 class="text-center m-3">Anagram Hunt</h2>
+  <h2 class="text-center">Anagram Hunt</h2>
 
   {{ block.super }}
-  
+    
 {% endblock %} 
