cont-models: Finally!!!  Got both Game and FinalScore models working, and Leaderboard views working.  This took FOREVER!

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -82,10 +82,10 @@
                 aria-labelledby="leaderboards-dropdown-link">
                 <a id="ah-leaderboard-nav-link" 
                   class="dropdown-item" 
-                  href="{% url 'games:ah_leaderboard' %}">Anagram Hunt Leaderboard</a> 
+                  href="{% url 'games:ah-leaderboard' %}">Anagram Hunt Leaderboard</a> 
                 <a id="mf-leaderboard-nav-link" 
                   class="dropdown-item" 
-                  href="{% url 'games:mf_leaderboard' %}">Math Facts Leaderboard</a>
+                  href="{% url 'games:mf-leaderboard' %}">Math Facts Leaderboard</a>
             </div>
           </li><!-- END Leaderboards Dropdown -->
 
