--- a/templates/games/ah-leaderboard.html
+++ b/templates/games/ah-leaderboard.html
@@ -15,6 +15,7 @@
         <th id="ah-player-header">Player</th>
         <th id="ah-score-header">Final Score</th>
         <th id="ah-date-header">Date Played</th>
+        <th id="ah-settings-header">Game Settings</th>
       </tr>
     </thead>
 
@@ -25,6 +26,8 @@
         <td id="ah-player">{{ score.player }}</td>
         <td id="ah-score">{{ score.final_score }}</td>
         <td id="ah-datetime">{{ score.game_date_time }}</td>
+        <td id="ah-settings">  
+          <b>Word Length:</b> {{ score.game.settings.word_length }}</td>
       </tr>
       {% endfor %}
     </tbody>
