user-models-n-db: Added Admin link to _base.html's footer

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -140,6 +140,10 @@
             <a id="about-footer-link" class="nav-link" href="{% url 'pages:about' %}" 
               alt="Go to our About Us page">About</a>
           </li>
+          <li id="admin-footer-item" class="nav-item">
+            <a id="admin-footer-link" class="nav-link" href="{% url 'admin:index' %}" 
+              alt="Log in to our Admin site">Admin</a>
+          </li>
           <li id="contact-footer-item" class="nav-item">
             <a id="contact-footer-link" class="nav-link" href="#" 
               alt="Go to our Contact Us page">Contact Us</a>
@@ -147,8 +151,7 @@
           <li id="feedback-footer-item" class="nav-item">
             <a id="feedback-footer-link" class="nav-link" href="#" 
               alt="Send feedback or write a review">Feedback</a>
-          </li>
-        </ul>
+          </li>  
       </nav>
       <p class="m-2">
         <cite>Website designed &amp; developed by: 
