setup-emailing-n-forms: Review link on About Us page and making sure all secondary page headers are h2s

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block main %}
-  <h1 class="text-center">About Us</h1>
-  
+  <h2 class="text-center">About Us</h2>
+  <p>
+    Have feedback for us? <br />
+    <a href="{% url 'reviews:feedback' %}">Leave a review</a>.
+  </p>
 {% endblock %} 
