--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block main %}
-  <h1 class="text-center">Home</h1>
+  <h1 class="text-center">Play2Learn</h1>
+  <h2 class="text-center">Home</h2>
   
 {% endblock %} 
