setup-emailing-n-forms: Review thanks message html

--- a/templates/reviews/thanks.html
+++ b/templates/reviews/thanks.html
@@ -6,6 +6,10 @@
   <h2 id="review-submitted-header" class="text-center">Feedback: Review Submitted</h2>
 
   <div id="review-submitted-div" class="card border-primary m-auto mb-3 p-3 text-center" style="max-width: 50rem">
-    <p id="review-submitted-msg">Thanks! We will get back to you soon!</p>
+    <p id="review-submitted-msg">
+      Thanks! For leaving a review. <br />
+      Your review may be published on our homepage. <br />
+      If our team has questions, we may reach out to you via the email address you provided.
+    </p>
   </div>
 {% endblock %}
