setup-emailing-n-forms: Reviews urls, links, and disclaimer

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -149,7 +149,7 @@
               alt="Go to our Contact Us page">Contact Us</a>
           </li>
           <li id="feedback-footer-item" class="nav-item">
-            <a id="feedback-footer-link" class="nav-link" href="#" 
+            <a id="feedback-footer-link" class="nav-link" href="{% url 'reviews:feedback' %}" 
               alt="Send feedback or write a review">Feedback</a>
           </li>  
       </nav>
