--- a/templates/reviews/review-form.html
+++ b/templates/reviews/review-form.html
@@ -1,21 +1,25 @@
 {% extends "_base.html" %}
 
 {% block title %}
-  Feedback: Leave a Review
+Feedback: Leave a Review
 {% endblock %}
 
 {% block main %}
-  <h2 id="review-form-header" class="text-center">Feedback: Leave a Review</h2>
+<h2 id="review-form-header" class="m-3 text-center">Feedback: Write a Review</h2>
 
-  <div id="review-form-div" class="card border-primary m-auto mb-3 p-3" style="max-width: 40rem">
-      <form id="review-form" method="post">
-        {% csrf_token %}
+<p id="review-disclaimer-msg" class="m-3 text-center">
+  Pleas note, your review may be published on our home page. <br />
+  If our team has questions, we may reach out to you via the email address provided.
+</p>
 
-        {{ form.as_p }}
-        
-        <button id="review-submit-btn" 
-          class="btn btn-success float-end" name="submit" type="submit" 
-          alt="Submit Button: Press to submit your review">Submit</button>
-      </form>
-  </div>
+<div id="review-form-div" class="card border-primary m-auto mb-3 p-3" style="max-width: 40rem">
+  <form id="review-form" method="post">
+    {% csrf_token %}
+
+    {{ form.as_p }}
+
+    <button id="review-submit-btn" class="btn btn-success float-end" name="submit" type="submit"
+      alt="Submit Button: Press to submit your review">Submit</button>
+  </form>
+</div>
 {% endblock %}
