--- a/templates/reviews/thanks.html
+++ b/templates/reviews/thanks.html
@@ -7,9 +7,9 @@
 
   <div id="review-submitted-div" class="card border-primary m-auto mb-3 p-3 text-center" style="max-width: 50rem">
     <p id="review-submitted-msg">
-      Thanks! For leaving a review. <br />
-      Your review may be published on our homepage. <br />
-      If our team has questions, we may reach out to you via the email address you provided.
+      Thanks! For writing a review. <br />
+      Your review may be published on our home page. <br />
+      If our team has questions, we may reach out to you via the email address provided.
     </p>
   </div>
 {% endblock %}
