--- a/static/css/main.css
+++ b/static/css/main.css
@@ -78,3 +78,22 @@ p#no-scores-yet {
   font-style: italic;
 }
 /* End Leaderboards TABLE styles */
+
+
+/* FORM styles */
+#review-form-container {
+  box-sizing: border-box;
+  max-width: 45rem; 
+}
+
+#review-disclaimer-msg,
+#review-form-div {
+  box-sizing: border-box;
+  max-width: 40rem; 
+}
+
+#review-form {
+  box-sizing: border-box;
+  max-width: 38rem; 
+}
+/* End FORM styles */
