setup-emailing-n-forms: added validation to comments field in ReviewForm

--- a/templates/reviews/review-form.html
+++ b/templates/reviews/review-form.html
@@ -17,7 +17,7 @@
   </p>
 
   <div id="review-form-div" class="card border-primary m-auto mb-5 p-3">
-    <form id="review-form" method="post" class="form">
+    <form id="review-form" method="post" class="form" novalidate>
 
       {% csrf_token %}
 
