setup-emailing-n-forms: contact-us Form, model, views, and urls

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -146,7 +146,7 @@
               alt="Log in to our Admin site">Admin</a>
           </li>
           <li id="contact-footer-item" class="nav-item">
-            <a id="contact-footer-link" class="nav-link" href="#" 
+            <a id="contact-footer-link" class="nav-link" href="{% url 'pages:contact-us' %}" 
               alt="Go to our Contact Us page">Contact Us</a>
           </li>
           <li id="feedback-footer-item" class="nav-item">
