--- a/templates/_base.html
+++ b/templates/_base.html
@@ -121,7 +121,7 @@
             <a id="sign-dropdown-link" class="nav-link dropdown-toggle" 
               href="#"  
               role="button" data-bs-toggle="dropdown" aria-haspopup="true" 
-              aria-expanded="false">Sign In / Sign Up</a>
+              aria-expanded="false">Sign In/Sign Up</a>
             <div id="sign-dropdown-menu-div" class="dropdown-menu" 
               aria-labelledby="sign-dropdown-link">
               <a id="login-nav-link" class="dropdown-item" href="#">Log in</a>
@@ -151,7 +151,7 @@
           </li>
           <li id="feedback-footer-item" class="nav-item">
             <a id="feedback-footer-link" class="nav-link" href="{% url 'reviews:feedback' %}" 
-              alt="Send feedback or write a review">Feedback</a>
+              alt="Send feedback or write a review">Feedback/Reviews</a>
           </li>  
       </nav>
       <p class="m-2">
