--- a/templates/games/mf-leaderboard.html
+++ b/templates/games/mf-leaderboard.html
@@ -5,37 +5,39 @@
 {% endblock %}
 
 {% block main %}
-<h2 id="mf-leaderboard-heading" class="m-3 text-center">Math Facts Leaderboard</h2>
+<h2 id="mf-leaderboard-heading" class="mx-auto mt-3 mb-0 text-center">Math Facts Leaderboard</h2>
 
-{% if math_scores %}
-  <table id="mf-leaderboard-tbl" class="table table-striped table-hover mx-auto my-3 border">
-    <thead class="table-primary">
-      <tr>
-        <th id="mf-rank-header">Rank</th>
-        <th id="mf-player-header">Player</th>
-        <th id="mf-score-header">Final Score</th>
-        <th id="mf-date-header">Date Played</th>
-        <th id="mf-settings-header">Game Settings</th>
-      </tr>
-    </thead>
+<div id="mf-leaderboard-container" class="container-fluid mx-auto mt-0 mb-5 p-3">
+  {% if math_scores %}
+    <table id="mf-leaderboard-tbl" class="table table-striped table-hover mx-auto my-2 border">
+      <thead class="table-primary">
+        <tr>
+          <th id="mf-rank-header">Rank</th>
+          <th id="mf-player-header">Player</th>
+          <th id="mf-score-header">Final Score</th>
+          <th id="mf-date-header">Date Played</th>
+          <th id="mf-settings-header">Game Settings</th>
+        </tr>
+      </thead>
 
-    <tbody>
-      {% for score in math_scores %}
-      <tr>
-        <td id="mf-rank">{{ forloop.counter }}</td>  
-        <td id="mf-player">{{ score.player.username }}</td>
-        <td id="mf-score">{{ score.final_score }}</td>
-        <td id="mf-datetime">{{ score.game_date_time }}</td>
-        <td id="mf-settings"> 
-          <b>{{ score.game.get_mf_operation }}</b> <br/> 
-          <b>Max Operand:</b> {{ score.game.settings.max_number }}</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-{% else %}
-  <p id="no-scores-yet" class="text-primary text-center">
-    No scores yet. Be the first to set a record!
-  </p>
-{% endif %}
-{% endblock %}
+      <tbody>
+        {% for score in math_scores %}
+        <tr>
+          <td id="mf-rank">{{ forloop.counter }}</td>  
+          <td id="mf-player">{{ score.player.username }}</td>
+          <td id="mf-score">{{ score.final_score }}</td>
+          <td id="mf-datetime">{{ score.game_date_time }}</td>
+          <td id="mf-settings"> 
+            <b>{{ score.game.get_mf_operation }}</b> <br/> 
+            <b>Max Operand:</b> {{ score.game.settings.max_number }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  {% else %}
+    <p id="no-scores-yet" class="text-primary text-center">
+      No scores yet. Be the first to set a record!
+    </p>
+  {% endif %}
+</div>
+{% endblock %}  <!-- END main -->
